@@ -1,5 +1,7 @@
 2005-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/index.html: HTML fixes, run indent-region.
+
 	* GNUmakefile (check-translation): New target.
 
 	* scripts/check-translation.py: New file.
